@@ -1,6 +1,9 @@
 New in v1.1.11 (????/??/??)
 ---------------------------
 
+Fix for bug #19896 -- symlink() doesn't work on a CIFS-mounted Windows
+share.  (Jonathan Hankins)
+
 Fix for bug #19895 -- eliminate traceback for special file detection
 on CIFS mounts.  (Jonathan Hankins)
 
